Update README with install instructions

--- a/install
+++ b/install
@@ -3,7 +3,7 @@ d=`dirname $0`
 
 ln -s $d/.oh-my-zsh ~/.oh-my-zsh
 ln -s $d/zsh/zshrc.zsh-template ~/.zshrc
-ln -s $d/zsh/prose.zsh-theme ~/.oh-my-zsh/themes/prose.zsh-theme
+ln -s $d/zsh/prose.zsh-theme $d/.oh-my-zsh/themes/prose.zsh-theme
 ln -s $d/vim ~/.vim
 ln -s $d/vim/vimrc ~/.vimrc
 ln -s $d/git/gitconfig ~/.gitconfig
